<resources>
    <string name="app_name">Sports Car</string>
    <string name="cars_name">Cars Name</string>
    <string name="description">Description</string>
    <string name="rating">⭐️⭐️⭐️</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="switch_icon">switch_icon</string>
    <string name="profile">Profile</string>
    <string name="mode">Mode</string>
    <string name="dummy_photos">6 photos</string>
    <string name="specification">Specification</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="production">Production</string>
    <string name="engine">Engine</string>
    <string name="asemmbly">Asemmbly</string>
    <string name="desaigner">Desaigner</string>
    <string name="name_profile">Andri Darmuli</string>
    <string name="email_profile">andri.darmuli26@gmail.com</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string-array name="data_name">
        <item>Ferrari SF90 Stradale</item>
        <item>Lamborghini Revuelto</item>
        <item>Bugatti Chiron</item>
        <item>McLaren 720S</item>
        <item>Maserati MC20</item>
        <item>Chevrolet Corvette Z06</item>
        <item>Porsche Carrera GT</item>
        <item>Ford Shelby Mustang GT500</item>
        <item>Koenigsegg Jesko</item>
        <item>Rimac Nevera</item>
        <item>Pininfarina Battista</item>
    </string-array>
</resources>