<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:contentDescription="@string/cars_name"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircleRadius="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_photo"
            app:layout_constraintTop_toTopOf="@+id/img_item_photo"
            tools:text="@string/cars_name" />

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#827717"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:ignore="TextContrastCheck"
            tools:text="@string/rating" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:ellipsize="end"
            android:maxLines="5"
            app:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>